# rootPlotter

./: CMakeLists.txt  README.md  rootPlotter.cpp  rootPlotter.h
Demonstrations/: ColorPaletteDemo.cpp  ObjectTypeDemo.cpp
